<resources>
    <string name="app_name">Toepen Score Tracker</string>
    <string name="players_label">Spelers:</string>
    <string name="end_game_button">Eindig spel</string>
    <string name="player_score">%1$s: %2$s</string>
    <string name="penalty_button">Strafpunt voor %1$s</string>
    <string name="game_ended">Spel beëindigd!</string>
    <string name="results_label">Spelresultaten:</string>
    <string name="view_results_button">Bekijk resultaten</string>
    <string name="max_points_label">Maximum aantal strafpunten:</string>
    <string name="enter_max_points_hint">bijv. 15</string>
    <string name="player_lost">%s heeft verloren!</string>
    <string name="player_won">%s heeft gewonnen!</string>
    <string name="game_summary">Speloverzicht</string>
    <string name="duration_label">Speelduur: %s</string>
    <string name="back_to_start">Terug naar start</string>
    <string name="klop_button">Klop! (Punten: %d)</string>
    <string name="undo_button">Ongedaan maken</string>
    <string name="share_results">Deel resultaten</string>
    <string name="share_title">Resultaat van Toepen</string>
    <string name="jack_button">Boer!</string>
    <string name="next_round_button">Volgende ronde</string>
    <string name="fold_button">Pas (%d pt)</string>
    <string name="leaderboard_button">Ranglijst</string>
    <string name="leaderboard_title">Ranglijst (%s)</string>
    <string name="clear_history">Wis geschiedenis</string>
    <string name="wipe_all_databases">Wis alle gegevens (alle profielen)</string>
    <string name="confirm_clear">Weet je zeker dat je alle resultaten voor dit profiel wilt wissen?</string>
    <string name="confirm_wipe_all">Weet je zeker dat je ALLE gegevens van ALLE profielen wilt wissen? Dit kan niet ongedaan worden gemaakt.</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="enter_player_count">Voer het aantal spelers in</string>
    <string name="player_count_out_of_range">Aantal spelers moet tussen 2 en 8 liggen</string>
    <string name="delete_short_games">Verwijder korte spellen (&lt; 1 min)</string>
    <string name="confirm_delete_short_games">Weet je zeker dat je alle spellen korter dan 1 minuut wilt verwijderen?</string>
    <string name="settings_title">Instellingen</string>
    <string name="section_manage">Beheer</string>
    <string name="section_backup">Back-up &amp; herstel</string>
    <string name="section_danger">Gevaarlijke acties</string>
    <string name="max_points_current_label">Standaard max. strafpunten:</string>
    <string name="save_settings">Opslaan</string>
    <string name="settings_saved">Instellingen opgeslagen</string>
    <string name="backup_current">Back-up maken</string>
    <string name="restore_current">Herstellen uit back-up</string>
    <string name="manage_profiles">Profielen beheren</string>
    <string name="add_profile">Profiel toevoegen</string>
    <string name="add_profile_section">Nieuw profiel</string>
    <string name="profile_name_hint">Profielnaam</string>
    <string name="delete_profile">Verwijder</string>
    <string name="confirm_delete_profile">Weet je zeker dat je profiel \'%s\' en alle bijbehorende data wilt verwijderen?</string>
    <string name="profile_already_exists">Profiel bestaat al</string>
    <string name="profile_name_empty">Vul een profielnaam in</string>
    <string name="profile_name_too_long">Profielnaam mag maximaal 30 tekens zijn</string>
    <string name="backup_success">Back-up opgeslagen</string>
    <string name="backup_success_file">Back-up opgeslagen als %1$s in Downloads</string>
    <string name="backup_failed">Back-up mislukt</string>
    <string name="restore_title">Herstel database</string>
    <string name="restore_success">Herstel geslaagd</string>
    <string name="restore_failed">Herstel mislukt</string>
    <string name="confirm_restore">Weet je zeker dat je wilt herstellen? Bestaande spellen blijven behouden, nieuwe spellen worden toegevoegd.</string>
    <string name="current_profile">Huidig profiel: %s</string>
    <string name="clear_history_current">Wis geschiedenis (huidig profiel)</string>
    <string name="setting_confirm_penalty">Bevestig strafpunt</string>
    <string name="setting_show_rematch">Toon revanche knop</string>
    <string name="confirm_penalty_message">Strafpunt toevoegen aan %s?</string>
    <string name="rename_profile">Naam wijzigen</string>
    <string name="rename_dialog_hint">Nieuwe naam</string>
    <string name="rename_profile_empty">Naam mag niet leeg zijn</string>
    <string name="rename_profile_duplicate">Er bestaat al een profiel met deze naam</string>
    <string name="revanche">Revanche?</string>
    <string name="add_player">Speler toevoegen</string>
    <string name="remove_player">Verwijder speler</string>
</resources>